--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eleicao-brasil",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://danrjr.github.io",
+  "homepage": "https://danrjr.github.io/eleicao-brasil",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
